# vibe-kanban

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml  justfile  package.json  pnpm-lock.yaml
.claude/skills/linear/: SKILL.md
.claude/skills/sentry/: SKILL.md
.github/workflows/: pre-release.yml
crates/db/.sqlx/: query-0223c58ac26a0be49a256c32a021d1b9624dedce51ca953641ded80418412828.json  query-0341b85611f57e419702bcc154e1953967b0b821f61ab6326a8e522ce2f22f51.json  query-049424f5a2372a324a7b2948103e2cd640d6baaaf46a3db79b6263eb4d096c1b.json  query-05afaeb55abb979ce129acd450710b357ec569176f81470ec11aa60946bca95f.json  query-067f90a9f12713b289da6f96465ec008c616deb27a11f78dc90f76745e660a5f.json  query-0c7b20643f119afd3e233105b0fa2920e8e940bdad86cdc95d01e485a20d6ed4.json  query-0e9015d8008191141c49a42cbdcbac019eeb888cfc5c85038da36f0c312e01b6.json  query-13826fc6fdd367255cb921640e5972f30905ac7a81ad477cf8bbcfc24f06f39b.json  query-1ac591c7a78ec0a66dc9d0e02e22e0bd93f23febe80c3232f4e7d52272e4e0ca.json  query-20898edd1e0b23ebd3501f1dd3c803945e646140e061c99f7735c0c99683c6ff.json  query-20e4f7163c5fd5bafc868531c03a9a00cc48c21944c486a21529715504065572.json  query-2ef2d2e9603c76e004383bde11503fc64b69beeabfd5ce5e0bd090bbd8e6b23e.json  query-30fa7ab4739f592a8ee5fa371b27b78f170b1946155f95e6eb7d752246c7ba36.json  query-3266b6a544952177f84e2e7c31be9dba212c92d91b997de7f6aa811e08ed6c72.json  query-35594ef6f689350e4a006cba824ff56bcec06516b964147de6ca422574d4b21c.json  query-3a9f522457319d9e12bc18916eb1a01147d120e57938e4fe26bb81e022fc31c5.json  query-3ad001333a0552f5d2baea1f2354675e57f7d2f77316a37a22c4d535c367b9ca.json  query-3ad9a6dbbfb4884bd626d137b029281e270e7be0d1679e9da1a0601401a36f42.json  query-3b7b95761f62b2d83aecf0c2d715c988bdb6e2172d252214d82a8f9837f2ef7d.json  (+80 more)
crates/executors/: default_mcp.json  default_profiles.json
crates/local-deployment/: Cargo.toml
crates/remote/: Cargo.toml
crates/server/: Cargo.toml
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  embedded_server.rs  main.rs  terminal.rs
crates/tui/src/api/: client.rs  mod.rs  websocket.rs
crates/tui/src/input/: actions.rs  events.rs  keybindings.rs  mod.rs
crates/tui/src/state/: app_state.rs  attempts.rs  logs.rs  mod.rs  projects.rs  search.rs  sessions.rs  tasks.rs  worktrees.rs
crates/tui/src/storage/: tasks.rs
crates/tui/src/ui/: attempt_chat.rs  common.rs  kanban.rs  logs.rs  mod.rs  projects.rs  search.rs  sessions.rs  task_detail.rs  worktrees.rs
crates/utils/: Cargo.toml
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  main.tsx  sw.ts
remote-frontend/src/: main.tsx
scripts/: setup-dev-environment.js
shared/: types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  server_runner.rs  tray.rs
(+184 files in other folders)
