[package]
name = "tui"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "vibe"
path = "src/main.rs"

[[bin]]
name = "vibe-migrate"
path = "src/bin/migrate.rs"

[lints.clippy]
uninlined-format-args = "allow"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tempfile = "3"
open = "5"
glob = "0.3"
rusqlite = "0.32"
